--- a/my-app/src/components/Title/style.css
+++ b/my-app/src/components/Title/style.css
@@ -1,5 +1,10 @@
 .title {
-    background: rgb(118, 141, 243);
+    background: url(https://wallpapercave.com/wp/5P0Nxyf.jpg);
+    background-repeat: no-repeat;
     width: 100%;
     height: 200px;
+    padding: 70px;;
+    text-align: center;
+    color: whitesmoke;
+    font-size: 40px;
 }
