--- a/my-app/src/components/Wrapper/style.css
+++ b/my-app/src/components/Wrapper/style.css
@@ -1,9 +1,12 @@
 .wrapper {
     background: #ECEFF1;
     height: 100%;
+    width: 1000px;
+    margin: auto;
     display: flex;
     flex-flow: row wrap;
     justify-content: space-around;
     align-content: flex-start;
     overflow: auto;
+    
   }
