--- a/my-app/src/components/Title/style.css
+++ b/my-app/src/components/Title/style.css
@@ -7,4 +7,9 @@
     text-align: center;
     color: whitesmoke;
     font-size: 40px;
+    margin-bottom: 50px;
+}
+
+.sub-title {
+    font-size: 20px;
 }
